--- a/AndroidExample/app/src/main/res/values/strings.xml
+++ b/AndroidExample/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <string name="hello_second_fragment">Hello second fragment</string>
     <string name="first_item">First Item</string>
     <string name="second_item">Second Item</string>
+    <string name="avatar">avatar</string>
+    <string name="surname">Surname</string>
+    <string name="name">Name</string>
+    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_accumsan_sodales_nisl_in_commodo_ex_lacinia_iaculis_donec_feugiat_lacinia_malesuada_nam_semper_sapien_quis_erat_commodo_id_rutrum_arcu_gravida_sed_id_pharetra_augue_sed_eleifend_metus_donec_semper_tristique_eros_at_venenatis_mauris_nec_felis_scelerisque_ultrices_odio_id_maximus_magna_nam_ultrices_neque_quis_aliquet_volutpat_tellus_libero_dapibus_ligula_a_feugiat_turpis_leo_sit_amet_nisl_class_aptent_taciti_sociosqu_ad_litora_torquent_per_conubia_nostra_per_inceptos_himenaeos">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan sodales nisl, in commodo ex lacinia iaculis. Donec feugiat lacinia malesuada. Nam semper sapien quis erat commodo, id rutrum arcu gravida. Sed id pharetra augue, sed eleifend metus. Donec semper tristique eros at venenatis. Mauris nec felis scelerisque, ultrices odio id, maximus magna. Nam ultrices, neque quis aliquet volutpat, tellus libero dapibus ligula, a feugiat turpis leo sit amet nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
+    <string name="calendar">calendar</string>
+    <string name="camera">camera</string>
 </resources>
